--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.24.3"
+    "firebase": "^11.0.2",
+    "preact": "^10.24.3",
+    "react-firebase-hooks": "^5.1.1"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.9.1",
